--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "graphql-request": "6.1.0",
     "playwright": "1.40.1",
     "@playwright/browser-firefox": "1.40.1",
-    "mysql2": "3.7.0",
+    "mysql": "2.18.1",
     "dotenv": "16.3.1"
   }
 }
