--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "playwright": "1.40.1",
     "@playwright/browser-firefox": "1.40.1",
     "mysql": "2.18.1",
-    "dotenv": "16.3.1"
+    "dotenv": "16.3.1",
+    "axios": "1.6.5"
   }
 }
