--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@playwright/browser-firefox": "1.40.1",
     "mysql": "2.18.1",
     "dotenv": "16.3.1",
-    "axios": "1.6.5"
+    "axios": "1.6.5",
+    "node-cron": "3.0.0"
   }
 }
